--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@
                         <div class="col">
                             <div class="card h-100 align-items-center border-0 shadow">
                                 <div class="card-body d-flex align-items-center flex-column">
-                                    <p class="card-text text-center">This is a longer card with supporting text below as a natural
+                                    <p class="card-text text-center">This is a longer card with supporting text below as
+                                        a natural
                                         lead-in to additional content. This content is a little bit longer.</p>
                                     <img src="images/person 1.png" class="card-img-top image-fluite w-25 " alt="...">
                                     <h5>Regina Miles</h5>
@@ -246,7 +247,8 @@
                         <div class="col">
                             <div class="card h-100 align-items-center border-0 shadow ">
                                 <div class="card-body d-flex align-items-center flex-column">
-                                    <p class="card-text text-center">This is a longer card with supporting text below as a natural
+                                    <p class="card-text text-center">This is a longer card with supporting text below as
+                                        a natural
                                         lead-in to additional content. This content is a little bit longer.</p>
                                     <img src="images/person 2.png" class="card-img-top image-fluite w-25" alt="...">
                                     <h5>Regina Miles</h5>
@@ -258,7 +260,8 @@
                         <div class="col">
                             <div class="card h-100 align-items-center border-0 shadow">
                                 <div class="card-body d-flex align-items-center flex-column">
-                                    <p class="card-text text-center">This is a longer card with supporting text below as a natural
+                                    <p class="card-text text-center">This is a longer card with supporting text below as
+                                        a natural
                                         lead-in to additional content. This content is a little bit longer.</p>
                                     <img src="images/person 3.png" class="card-img-top image-fluite w-25" alt="...">
                                     <h5>Regina Miles</h5>
@@ -267,14 +270,119 @@
 
                             </div>
                         </div>
-                        
+
                     </div>
                 </div>
 
         </section>
-        
+        <!-- Happy clients section start  -->
+        <!-- Frequently asked questions section start  -->
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="accordion col-md-6 col-sm-12" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    Accordion Item #1
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the first item's accordion body.</strong> It is shown by default,
+                                    until the collapse plugin adds the appropriate classes that we use to style each
+                                    element. These classes control the overall appearance, as well as the showing and
+                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
+                                    our default variables. It's also worth noting that just about any HTML can go within
+                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    Accordion Item #2
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the second item's accordion body.</strong> It is hidden by default,
+                                    until the collapse plugin adds the appropriate classes that we use to style each
+                                    element. These classes control the overall appearance, as well as the showing and
+                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
+                                    our default variables. It's also worth noting that just about any HTML can go within
+                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    Accordion Item #3
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the third item's accordion body.</strong> It is hidden by default,
+                                    until the collapse plugin adds the appropriate classes that we use to style each
+                                    element. These classes control the overall appearance, as well as the showing and
+                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
+                                    our default variables. It's also worth noting that just about any HTML can go within
+                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingFour">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                    Accordion Item #3
+                                </button>
+                            </h2>
+                            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    <strong>This is the third item's accordion body.</strong> It is hidden by default,
+                                    until the collapse plugin adds the appropriate classes that we use to style each
+                                    element. These classes control the overall appearance, as well as the showing and
+                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
+                                    our default variables. It's also worth noting that just about any HTML can go within
+                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-12 justify-content-center align-items-center">
+                        <img class="img-fluid " src="images/people.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Frequently asked questions section end  -->
     </main>
 
+    <footer class="p-5 mt-5 ">
+        <div class="container">
+            <div class="row align-items-center text-white">
+                <div class="col ">
+                    <p class="text-center ">© 2020 bike. All rights reserved</p>
+                </div>
+                <div class="col d-flex flex-column align-items-center justify-content-center   ">
+                    <p>Get the App</p>
+                    <img class="img-fluid p-3" src="images/App Store Badge.png" alt="">
+                    <img class="img-fluid" src="images/Google Play Badge.png" alt="">
+                </div>
+            </div>
+        </div>
+
+    </footer>
     <!-- bootstrap CDN link  -->
     <script src="bootstrap/bootstrap.min.js"></script>
 </body>
